--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Equipment will be provided with exception of safety kit.</p>
       </section>
       <section class="Schedule">
         <h2>Sunday</h2>
-        <p>no clsses</p>
+        <p>no classes</p>
         <h2>Monday</h2>
         <h3>a101</h3>
         <p>4:00 PM - 5:00 PM</p>
