added footer style and font style

--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
           <p>archery-education@example.com</p>
           <p>(253)555-1010</p>
         </section>
-      </div>
-      <div class="col span_6_of_12">
         <section class="services">
             <h2>Classes</h2>
             <article class="classes">
@@ -74,6 +72,7 @@ Equipment will be provided with exception of safety kit.</p>
       </div>
       <div class="col span_6_of_12">
         <section class="Schedule">
+          <h2>Schedule</h2>
           <h2>Sunday</h2>
           <p>no classes</p>
           <h2>Monday</h2>
@@ -85,6 +84,7 @@ Equipment will be provided with exception of safety kit.</p>
           <h3>A103</h3>
           <p>5:00 PM - 6:00 PM</p>
           <h2>Wednesday</h2>
+          <h3>a101</h3>
           <p>4:00 PM - 5:00 PM</p>
           <h2>Thursday</h2>
           <h3>A102</h3>
@@ -97,18 +97,20 @@ Equipment will be provided with exception of safety kit.</p>
           <p>No classes</p>
         </section>
       </div>
-      <footer>
-        <img src="images/footerimage.jpg" alt="blue tinted picture of the fletching of arrows">
-        <p>Nondiscriminatory Policy:</p>
-        <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
-        <ul>
-          <li><a href="#">footerlink 1</a> </li>
-          <li><a href="#">footerlink 2</a> </li>
-          <li><a href="#">footerlink 3</a> </li>
-          <li><a href="#">footerlink 4</a> </li>
-        </ul>
-        <p>© 2018 Archery Academy | Seattle, WA</p>
-      </footer>
+      <div class="span_12_of_12">
+        <footer>
+          <img src="images/archeryAcademy-logo-white.png" alt="The Archery Acedemy logo.">
+          <p class="foottext">Nondiscriminatory Policy:</p>
+          <p class="foottext">Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
+          <ul class="navbar-foot">
+            <li class="foottext"><a href="#">footerlink 1</a> </li>
+            <li class="foottext"><a href="#">footerlink 2</a> </li>
+            <li class="foottext"><a href="#">footerlink 3</a> </li>
+            <li class="foottext"><a href="#">footerlink 4</a> </li>
+          </ul>
+          <p class="foottext">© 2018 Archery Academy | Seattle, WA</p>
+        </footer>
+      </div>
     </div>
   </body>
 </html>
