--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="col span_9_of_12">
           <nav>
             <ul class="navbar">
-              <li><a href="page-2.html">About us</a></li>
-              <li><a href="#">link 2</a></li>
-              <li><a href="#">link 3</a></li>
+              <li><a href="page-2.html" class="link">About us</a></li>
+              <li><a href="#" class="link">link 2</a></li>
+              <li><a href="#" class="link">link 3</a></li>
             </ul>
           </nav>
         </div>
@@ -97,16 +97,22 @@ Equipment will be provided with exception of safety kit.</p>
           <p>No classes</p>
         </section>
       </div>
+      <div class="col span_6_of_12">
+        <video	width="640"	height="480"	controls>
+          <source	src="media/pexels-mikhail-nilov-6603357.mp4" type="video/mp4">
+          Your	browser	does	not	support	video
+        </video>
+      </div>
       <div class="span_12_of_12">
         <footer>
           <img src="images/archeryAcademy-logo-white.png" alt="The Archery Acedemy logo.">
           <p class="foottext">Nondiscriminatory Policy:</p>
           <p class="foottext">Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
           <ul class="navbar-foot">
-            <li class="foottext"><a href="#">footerlink 1</a> </li>
-            <li class="foottext"><a href="#">footerlink 2</a> </li>
-            <li class="foottext"><a href="#">footerlink 3</a> </li>
-            <li class="foottext"><a href="#">footerlink 4</a> </li>
+            <li><a href="#" class="link">footerlink 1</a> </li>
+            <li><a href="#" class="link">footerlink 2</a> </li>
+            <li><a href="#" class="link">footerlink 3</a> </li>
+            <li><a href="#" class="link">footerlink 4</a> </li>
           </ul>
           <p class="foottext">© 2018 Archery Academy | Seattle, WA</p>
         </footer>
