fixed more errors

--- a/page-2.html
+++ b/page-2.html
@@ -49,7 +49,7 @@
            <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.</p>
           </article>
         </div>
-        <didv class="col span_3_of_12">
+        <div class="col span_3_of_12">
             <article class="instructor">
               <img src="images/instructor-bio-image2.png" alt="picture of Amy Smith">
               <h2>Amy Smith</h2>
@@ -91,10 +91,10 @@
         <p class="foottext">Nondiscriminatory Policy:</p>
         <p class="foottext">Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
         <ul class="navbar-foot">
-          <li><a href="#"class="link">footerlink 1</a> </li>
-          <li><a href="#"class="link">footerlink 2</a> </li>
-          <li><a href="#"class="link">footerlink 3</a> </li>
-          <li><a href="#"class="link">footerlink 4</a> </li>
+          <li><a href="#" class="link">footerlink 1</a> </li>
+          <li><a href="#" class="link">footerlink 2</a> </li>
+          <li><a href="#" class="link">footerlink 3</a> </li>
+          <li><a href="#" class="link">footerlink 4</a> </li>
         </ul>
         <p class="foottext">© 2018 Archery Academy | Seattle, WA</p>
       </footer>
