--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
           </nav>
         </div>
       </section>
+    </div>
+    <div class="section group">
       <div class="col span_6_of_12">
         <section class="Location">
           <h1>services</h1>
