added skip link zoomability and more clickable links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <div class="section group">
       <section class="banner">
         <div class="col span_3_of_12">
+
           <img src="images/archeryAcademy-logo-white.png" alt="The Archery Acedemy logo.">
+          <a href="#main-content" class="hidden">skip to main content</a>
         </div>
         <div class="col span_9_of_12">
           <nav>
@@ -24,7 +26,7 @@
     </div>
     <div class="section group">
       <div class="col span_6_of_12">
-        <section class="Location">
+        <section class="Location" id=main-content>
           <h1>services</h1>
           <h2>Location & contact info</h2>
           <p>Straight to the Point Archery</p>
