--- a/page-2.html
+++ b/page-2.html
@@ -10,6 +10,7 @@
       <section class="banner">
         <div class="col span_3_of_12">
           <img src="images/archeryAcademy-logo-white.png" alt="The Archery Acedemy logo.">
+          <a href="#main-content" class="hidden">skip to main content</a>
         </div>
         <div class="col span_9_of_12">
           <nav>
@@ -20,7 +21,7 @@
             </ul>
           </nav>
         </div>
-      </section>
+      </section id=main-content>
       <h1>About us</h1>
       <div class="col span_11_of_12">
         <section class="aboutus">
